force-app/main/default/objects/SalesforceSubscription__x/SalesforceSubscription__x.object-meta.xml
<CustomObject>
    <externalDataSource>Hera_Archive</externalDataSource>
    <externalName>SalesforceSubscription</externalName>
    <label>Subscription Salesforce</label>
    <pluralLabel>Subscriptions Salesforce</pluralLabel>
</CustomObject>