force-app/main/default/objects/SalesforceSubscription__x/fields/BillingModeC__c.field-meta.xml
<CustomField>
    <fullName>BillingModeC__c</fullName>
    <description>BillingModeC</description>
    <externalDeveloperName>BillingModeC</externalDeveloperName>
    <label>Modalita di Fatturazione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>