force-app/main/default/objects/SalesforceSubscription__x/fields/DescriptionSAPBonusContributoC__c.field-meta.xml
<CustomField>
    <fullName>DescriptionSAPBonusContributoC__c</fullName>
    <description>DescriptionSAPBonusContributoC</description>
    <externalDeveloperName>DescriptionSAPBonusContributoC</externalDeveloperName>
    <label>DescriptionSAPBonusContributoC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>