force-app/main/default/objects/SalesforceSubscription__x/fields/EmailRecipientVASC__c.field-meta.xml
<CustomField>
    <fullName>EmailRecipientVASC__c</fullName>
    <description>EmailRecipientVASC</description>
    <externalDeveloperName>EmailRecipientVASC</externalDeveloperName>
    <label>EmailRecipientVASC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>