force-app/main/default/objects/SalesforceSubscription__x/fields/Index2PUNC__c.field-meta.xml
<CustomField>
    <fullName>Index2PUNC__c</fullName>
    <description>Index2PUNC</description>
    <externalDeveloperName>Index2PUNC</externalDeveloperName>
    <label>Index2PUNC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>