force-app/main/default/objects/SalesforceSubscription__x/fields/MaximumKITNumberC__c.field-meta.xml
<CustomField>
    <fullName>MaximumKITNumberC__c</fullName>
    <description>MaximumKITNumberC</description>
    <externalDeveloperName>MaximumKITNumberC</externalDeveloperName>
    <label>Numero KIT Massimo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>