force-app/main/default/objects/SalesforceSubscription__x/fields/MaximumPieceNumberC__c.field-meta.xml
<CustomField>
    <fullName>MaximumPieceNumberC__c</fullName>
    <description>MaximumPieceNumberC</description>
    <externalDeveloperName>MaximumPieceNumberC</externalDeveloperName>
    <label>MaximumPieceNumberC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>