force-app/main/default/objects/SalesforceSubscription__x/fields/OwnerACC__c.field-meta.xml
<CustomField>
    <fullName>OwnerACC__c</fullName>
    <description>OwnerACC</description>
    <externalDeveloperName>OwnerACC</externalDeveloperName>
    <label>OwnerACC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>