force-app/main/default/objects/SalesforceSubscription__x/fields/PaymentModeC__c.field-meta.xml
<CustomField>
    <fullName>PaymentModeC__c</fullName>
    <description>PaymentModeC</description>
    <externalDeveloperName>PaymentModeC</externalDeveloperName>
    <label>PaymentModeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>