force-app/main/default/objects/SalesforceSubscription__x/fields/PercentageF2C__c.field-meta.xml
<CustomField>
    <fullName>PercentageF2C__c</fullName>
    <description>PercentageF2C</description>
    <externalDeveloperName>PercentageF2C</externalDeveloperName>
    <label>PercentageF2C</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>