force-app/main/default/objects/SalesforceSubscription__x/fields/PercentagePickOutC__c.field-meta.xml
<CustomField>
    <fullName>PercentagePickOutC__c</fullName>
    <description>PercentagePickOutC</description>
    <externalDeveloperName>PercentagePickOutC</externalDeveloperName>
    <label>PercentagePickOutC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>