force-app/main/default/objects/SalesforceSubscription__x/fields/PhoneRecipientC__c.field-meta.xml
<CustomField>
    <fullName>PhoneRecipientC__c</fullName>
    <description>PhoneRecipientC</description>
    <externalDeveloperName>PhoneRecipientC</externalDeveloperName>
    <label>PhoneRecipientC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>