force-app/main/default/objects/SalesforceSubscription__x/fields/PriceNetC__c.field-meta.xml
<CustomField>
    <fullName>PriceNetC__c</fullName>
    <description>PriceNetC</description>
    <externalDeveloperName>PriceNetC</externalDeveloperName>
    <label>PriceNetC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>