force-app/main/default/objects/SalesforceSubscription__x/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <description>Quote_Name</description>
    <externalDeveloperName>Quote_Name</externalDeveloperName>
    <label>Quota</label>
    <length>255</length>
    <type>Text</type>
</CustomField>