force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_AccountC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_AccountC__c</fullName>
    <description>SBQQ_AccountC</description>
    <externalDeveloperName>SBQQ_AccountC</externalDeveloperName>
    <label>SBQQ_AccountC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>