force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_AdditionalDiscountAmountC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_AdditionalDiscountAmountC__c</fullName>
    <description>SBQQ_AdditionalDiscountAmountC</description>
    <externalDeveloperName>SBQQ_AdditionalDiscountAmountC</externalDeveloperName>
    <label>Ammontare Sconto Aggiuntivo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>