force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_BillingFrequencyC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_BillingFrequencyC__c</fullName>
    <description>SBQQ_BillingFrequencyC</description>
    <externalDeveloperName>SBQQ_BillingFrequencyC</externalDeveloperName>
    <label>SBQQ_BillingFrequencyC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>