force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_ChargeTypeC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ChargeTypeC__c</fullName>
    <description>SBQQ_ChargeTypeC</description>
    <externalDeveloperName>SBQQ_ChargeTypeC</externalDeveloperName>
    <label>SBQQ_ChargeTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>