force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_ComponentDiscountedByPackageC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ComponentDiscountedByPackageC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SBQQ_ComponentDiscountedByPackageC</description>
    <externalDeveloperName>SBQQ_ComponentDiscountedByPackageC</externalDeveloperName>
    <label>SBQQ_ComponentDiscountedByPackageC</label>
    <type>Checkbox</type>
</CustomField>