force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_DimensionC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DimensionC__c</fullName>
    <description>SBQQ_DimensionC</description>
    <externalDeveloperName>SBQQ_DimensionC</externalDeveloperName>
    <label>Dimensioni</label>
    <length>255</length>
    <type>Text</type>
</CustomField>