force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_DimensionTypeC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DimensionTypeC__c</fullName>
    <description>SBQQ_DimensionTypeC</description>
    <externalDeveloperName>SBQQ_DimensionTypeC</externalDeveloperName>
    <label>Tipo Dimensioni</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>