force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_DiscountC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DiscountC__c</fullName>
    <description>SBQQ_DiscountC</description>
    <externalDeveloperName>SBQQ_DiscountC</externalDeveloperName>
    <label>Sconto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>