force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_DynamicOptionIdC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_DynamicOptionIdC__c</fullName>
    <description>SBQQ_DynamicOptionIdC</description>
    <externalDeveloperName>SBQQ_DynamicOptionIdC</externalDeveloperName>
    <label>SBQQ_DynamicOptionIdC</label>
    <length>40</length>
    <type>Text</type>
</CustomField>