force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_EndDateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_EndDateC__c</fullName>
    <description>SBQQ_EndDateC</description>
    <externalDeveloperName>SBQQ_EndDateC</externalDeveloperName>
    <label>SBQQ_EndDateC</label>
    <type>DateTime</type>
</CustomField>