force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_ListPriceC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ListPriceC__c</fullName>
    <description>SBQQ_ListPriceC</description>
    <externalDeveloperName>SBQQ_ListPriceC</externalDeveloperName>
    <label>SBQQ_ListPriceC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>