force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_MarkupAmountC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_MarkupAmountC__c</fullName>
    <description>SBQQ_MarkupAmountC</description>
    <externalDeveloperName>SBQQ_MarkupAmountC</externalDeveloperName>
    <label>Markup (Amt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>