force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_NetPriceC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_NetPriceC__c</fullName>
    <description>SBQQ_NetPriceC</description>
    <externalDeveloperName>SBQQ_NetPriceC</externalDeveloperName>
    <label>Prezzo Netto</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>