force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_OptionDiscountAmountC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OptionDiscountAmountC__c</fullName>
    <description>SBQQ_OptionDiscountAmountC</description>
    <externalDeveloperName>SBQQ_OptionDiscountAmountC</externalDeveloperName>
    <label>Opzione Sconto (Amt)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>