force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_OptionTypeC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OptionTypeC__c</fullName>
    <description>SBQQ_OptionTypeC</description>
    <externalDeveloperName>SBQQ_OptionTypeC</externalDeveloperName>
    <label>SBQQ_OptionTypeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>