force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_OrderProductC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OrderProductC__c</fullName>
    <description>SBQQ_OrderProductC</description>
    <externalDeveloperName>SBQQ_OrderProductC</externalDeveloperName>
    <label>Ordine Prodotto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>