force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_OriginalQuoteLineC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OriginalQuoteLineC__c</fullName>
    <description>SBQQ_OriginalQuoteLineC</description>
    <externalDeveloperName>SBQQ_OriginalQuoteLineC</externalDeveloperName>
    <label>SBQQ_OriginalQuoteLineC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>