force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_OriginalUnitCostC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_OriginalUnitCostC__c</fullName>
    <description>SBQQ_OriginalUnitCostC</description>
    <externalDeveloperName>SBQQ_OriginalUnitCostC</externalDeveloperName>
    <label>SBQQ_OriginalUnitCostC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>