force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_PackageProductDescriptionC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_PackageProductDescriptionC__c</fullName>
    <description>SBQQ_PackageProductDescriptionC</description>
    <externalDeveloperName>SBQQ_PackageProductDescriptionC</externalDeveloperName>
    <label>SBQQ_PackageProductDescriptionC</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>