force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_PricingMethodC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_PricingMethodC__c</fullName>
    <description>SBQQ_PricingMethodC</description>
    <externalDeveloperName>SBQQ_PricingMethodC</externalDeveloperName>
    <label>Metodo Prezzamento</label>
    <length>255</length>
    <type>Text</type>
</CustomField>