force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_ProrateMultiplierC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_ProrateMultiplierC__c</fullName>
    <description>SBQQ_ProrateMultiplierC</description>
    <externalDeveloperName>SBQQ_ProrateMultiplierC</externalDeveloperName>
    <label>Moltiplicatore Prorato</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>