force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_QuantityC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_QuantityC__c</fullName>
    <description>SBQQ_QuantityC</description>
    <externalDeveloperName>SBQQ_QuantityC</externalDeveloperName>
    <label>Quantità</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>