force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_QuoteLineC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_QuoteLineC__c</fullName>
    <description>SBQQ_QuoteLineC</description>
    <externalDeveloperName>SBQQ_QuoteLineC</externalDeveloperName>
    <label>Quote Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>