force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RenewalProductIdC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RenewalProductIdC__c</fullName>
    <description>SBQQ_RenewalProductIdC</description>
    <externalDeveloperName>SBQQ_RenewalProductIdC</externalDeveloperName>
    <label>Id Rinnovo Prodotto</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>