force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RenewalProductOptionIdC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RenewalProductOptionIdC__c</fullName>
    <description>SBQQ_RenewalProductOptionIdC</description>
    <externalDeveloperName>SBQQ_RenewalProductOptionIdC</externalDeveloperName>
    <label>Id Opzione Rinnovo Prodotto</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>