force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RenewalProductOptionSubscriptionPri__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RenewalProductOptionSubscriptionPri__c</fullName>
    <description>SBQQ_RenewalProductOptionSubscriptionPricingC</description>
    <externalDeveloperName>SBQQ_RenewalProductOptionSubscriptionPricingC</externalDeveloperName>
    <label>SBQQ_RenewalProductOptionSubscriptionPri</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>