force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RenewalQuantityC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RenewalQuantityC__c</fullName>
    <description>SBQQ_RenewalQuantityC</description>
    <externalDeveloperName>SBQQ_RenewalQuantityC</externalDeveloperName>
    <label>Rinnovo Quantità</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>