force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RequiredByIdC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RequiredByIdC__c</fullName>
    <description>SBQQ_RequiredByIdC</description>
    <externalDeveloperName>SBQQ_RequiredByIdC</externalDeveloperName>
    <label>SBQQ_RequiredByIdC</label>
    <length>18</length>
    <type>Text</type>
</CustomField>