force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RequiredByProductC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RequiredByProductC__c</fullName>
    <description>SBQQ_RequiredByProductC</description>
    <externalDeveloperName>SBQQ_RequiredByProductC</externalDeveloperName>
    <label>Richiesto Da Prodotto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>