force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_RevisedSubscriptionC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_RevisedSubscriptionC__c</fullName>
    <description>SBQQ_RevisedSubscriptionC</description>
    <externalDeveloperName>SBQQ_RevisedSubscriptionC</externalDeveloperName>
    <label>Sottoscrizione Revisionataà</label>
    <length>255</length>
    <type>Text</type>
</CustomField>