force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_SegmentEndDateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SegmentEndDateC__c</fullName>
    <description>SBQQ_SegmentEndDateC</description>
    <externalDeveloperName>SBQQ_SegmentEndDateC</externalDeveloperName>
    <label>SBQQ_SegmentEndDateC</label>
    <type>DateTime</type>
</CustomField>