force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_SegmentStartDateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SegmentStartDateC__c</fullName>
    <description>SBQQ_SegmentStartDateC</description>
    <externalDeveloperName>SBQQ_SegmentStartDateC</externalDeveloperName>
    <label>Inizio Data Segmento</label>
    <type>DateTime</type>
</CustomField>