force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_SegmentUpliftC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SegmentUpliftC__c</fullName>
    <description>SBQQ_SegmentUpliftC</description>
    <externalDeveloperName>SBQQ_SegmentUpliftC</externalDeveloperName>
    <label>SBQQ_SegmentUpliftC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>