force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_SpecialPriceC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SpecialPriceC__c</fullName>
    <description>SBQQ_SpecialPriceC</description>
    <externalDeveloperName>SBQQ_SpecialPriceC</externalDeveloperName>
    <label>SBQQ_SpecialPriceC</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>