force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_StartDateC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_StartDateC__c</fullName>
    <description>SBQQ_StartDateC</description>
    <externalDeveloperName>SBQQ_StartDateC</externalDeveloperName>
    <label>SBQQ_StartDateC</label>
    <type>DateTime</type>
</CustomField>