force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_SubscriptionTypeC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_SubscriptionTypeC__c</fullName>
    <description>SBQQ_SubscriptionTypeC</description>
    <externalDeveloperName>SBQQ_SubscriptionTypeC</externalDeveloperName>
    <label>Tipo Sottoscrizione</label>
    <length>255</length>
    <type>Text</type>
</CustomField>