force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_TermDiscountScheduleC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_TermDiscountScheduleC__c</fullName>
    <description>SBQQ_TermDiscountScheduleC</description>
    <externalDeveloperName>SBQQ_TermDiscountScheduleC</externalDeveloperName>
    <label>Termini Programma Sconto</label>
    <length>255</length>
    <type>Text</type>
</CustomField>