force-app/main/default/objects/SalesforceSubscription__x/fields/SBQQ_UnitCostC__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_UnitCostC__c</fullName>
    <description>SBQQ_UnitCostC</description>
    <externalDeveloperName>SBQQ_UnitCostC</externalDeveloperName>
    <label>Unità Costo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>