force-app/main/default/objects/SalesforceSubscription__x/fields/SendingBillModeC__c.field-meta.xml
<CustomField>
    <fullName>SendingBillModeC__c</fullName>
    <description>SendingBillModeC</description>
    <externalDeveloperName>SendingBillModeC</externalDeveloperName>
    <label>SendingBillModeC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>