force-app/main/default/objects/SalesforceSubscription__x/fields/SignDateC__c.field-meta.xml
<CustomField>
    <fullName>SignDateC__c</fullName>
    <description>SignDateC</description>
    <externalDeveloperName>SignDateC</externalDeveloperName>
    <label>SignDateC</label>
    <type>DateTime</type>
</CustomField>