force-app/main/default/objects/SalesforceSubscription__x/fields/TypologyC__c.field-meta.xml
<CustomField>
    <fullName>TypologyC__c</fullName>
    <description>TypologyC</description>
    <externalDeveloperName>TypologyC</externalDeveloperName>
    <label>Tipologia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>