force-app/main/default/objects/SalesforceSubscription__x/fields/VasPolicyNumberC__c.field-meta.xml
<CustomField>
    <fullName>VasPolicyNumberC__c</fullName>
    <description>VasPolicyNumberC</description>
    <externalDeveloperName>VasPolicyNumberC</externalDeveloperName>
    <label>Numero Polizza VAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>