force-app/main/default/objects/SalesforceSubscription__x/fields/VasReplacementDateC__c.field-meta.xml
<CustomField>
    <fullName>VasReplacementDateC__c</fullName>
    <description>VasReplacementDateC</description>
    <externalDeveloperName>VasReplacementDateC</externalDeveloperName>
    <label>VasReplacementDateC</label>
    <type>DateTime</type>
</CustomField>