force-app/main/default/objects/SalesforceSubscription__x/fields/VasReplacementRequestDateC__c.field-meta.xml
<CustomField>
    <fullName>VasReplacementRequestDateC__c</fullName>
    <description>VasReplacementRequestDateC</description>
    <externalDeveloperName>VasReplacementRequestDateC</externalDeveloperName>
    <label>VasReplacementRequestDateC</label>
    <type>DateTime</type>
</CustomField>