force-app/main/default/objects/SalesforceSubscription__x/fields/VasSupplierStatusC__c.field-meta.xml
<CustomField>
    <fullName>VasSupplierStatusC__c</fullName>
    <description>VasSupplierStatusC</description>
    <externalDeveloperName>VasSupplierStatusC</externalDeveloperName>
    <label>Stato fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>