force-app/main/default/objects/SalesforceSubscription__x/fields/VasSupplierStatusDetailsC__c.field-meta.xml
<CustomField>
    <fullName>VasSupplierStatusDetailsC__c</fullName>
    <description>VasSupplierStatusDetailsC</description>
    <externalDeveloperName>VasSupplierStatusDetailsC</externalDeveloperName>
    <label>Dettaglio stato fornitore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>